Wrapped render in onload to stop empty renders

--- a/client/stylesheets/mass.css
+++ b/client/stylesheets/mass.css
@@ -80,6 +80,18 @@
     padding: 30px 0px 30px 0px;
 }
 
+.footer {
+    padding-top: 30px;
+    position: fixed;
+    height: 55px;
+    bottom: 0;
+    width: 100%;
+    background-color: #F5F5F5;
+    border-color: #E7E7E7;
+    border-width: 0px 0px 5px;
+    z-index: 10;
+}
+
 .uploader {
     position: relative;
     overflow: hidden;
@@ -97,14 +109,8 @@
     font-size: 100px;
     filter: alpha(opacity=0);
     cursor: pointer;
+    z-index: inherit;
 }
 
-.footer {
-    position: fixed;
-    height: 100px;
-    bottom: 0;
-    width: 100%;
-    background-color: #F5F5F5;
 
-}
 
